RESOLVED FIXED209971
[JSC] canonicalizeLocaleList should gracefully throw OOM error if input + error message is too large
https://bugs.webkit.org/show_bug.cgi?id=209971
Summary [JSC] canonicalizeLocaleList should gracefully throw OOM error if input + err...
Yusuke Suzuki
Reported 2020-04-03 10:03:47 PDT
[JSC] canonicalizeLocaleList should gracefully throw OOM error if input + error message is too large
Attachments
Patch (4.10 KB, patch)
2020-04-03 10:06 PDT, Yusuke Suzuki
no flags
Patch (4.16 KB, patch)
2020-04-03 10:09 PDT, Yusuke Suzuki
mark.lam: review+
Yusuke Suzuki
Comment 1 2020-04-03 10:06:27 PDT
Yusuke Suzuki
Comment 2 2020-04-03 10:07:43 PDT
Yusuke Suzuki
Comment 3 2020-04-03 10:09:16 PDT
Mark Lam
Comment 4 2020-04-03 10:34:58 PDT
Comment on attachment 395388 [details] Patch r=me
Yusuke Suzuki
Comment 5 2020-04-03 11:40:11 PDT
Note You need to log in before you can comment on or make changes to this bug.