[JSC] canonicalizeLocaleList should gracefully throw OOM error if input + error message is too large https://bugs.webkit.org/show_bug.cgi?id=209971 <rdar://problem/61258621>

Reviewed by Mark Lam.

JSTests:

* stress/intl-canonicalize-locale-list-error-oom.js: Added.
(shouldThrow):

Source/JavaScriptCore:

canonicalizeLocaleList generates error-message with input. If input is too large, error-message string
generation could fail due to OOM. We should gracefully throw OOM error instead of crashing. This strategy
follows to `createError`'s error-message generation: if error-message generation fails, throwing OOM error.

* runtime/IntlObject.cpp:
(JSC::canonicalizeLocaleList):

Canonical link: https://commits.webkit.org/222899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259481 268f45cc-cd09-0410-ab3c-d52691b4dbfc