JSTests/stress/intl-canonicalize-locale-list-error-oom.js
@@ -1,0 +1,18 @@
+function shouldThrow(func, errorMessage) {
+    var errorThrown = false;
+    var error = null;
+    try {
+        func();
+    } catch (e) {
+        errorThrown = true;
+        error = e;
+    }
+    if (!errorThrown)
+        throw new Error('not thrown');
+    if (String(error) !== errorMessage)
+        throw new Error(`bad error: ${String(error)}`);
+}
+
+shouldThrow(() => {
+    0..toLocaleString(''.padStart(2**31-1, 'a'));
+}, `Error: Out of memory`);
